Import of ETHER/namespace-autoclean-0.21 from CPAN.
gitpan-cpan-distribution: namespace-autoclean
gitpan-cpan-version:      0.21
gitpan-cpan-path:         ETHER/namespace-autoclean-0.21.tar.gz
gitpan-cpan-author:       ETHER
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -13,11 +13,13 @@ build_requires:
   base: '0'
   constant: '0'
   overload: '0'
+  perl: '5.006'
 configure_requires:
   ExtUtils::MakeMaker: '0'
-  Module::Build::Tiny: '0.038'
+  Module::Build::Tiny: '0.039'
+  perl: '5.006'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.020, CPAN::Meta::Converter version 2.142060'
+generated_by: 'Dist::Zilla version 5.023, CPAN::Meta::Converter version 2.142690'
 keywords:
   - namespaces
   - clean
@@ -39,7 +41,7 @@ no_index:
 provides:
   namespace::autoclean:
     file: lib/namespace/autoclean.pm
-    version: '0.20'
+    version: '0.21'
 requires:
   B::Hooks::EndOfScope: '0.12'
   List::Util: '0'
@@ -52,10 +54,10 @@ resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=namespace-autoclean
   homepage: https://github.com/moose/namespace-autoclean
   repository: https://github.com/moose/namespace-autoclean.git
-version: '0.20'
+version: '0.21'
 x_Dist_Zilla:
   perl:
-    version: '5.021003'
+    version: '5.020001'
   plugins:
     -
       class: Dist::Zilla::Plugin::Prereqs
@@ -64,7 +66,7 @@ x_Dist_Zilla:
           phase: develop
           type: requires
       name: '@Author::ETHER/bundle_plugins'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::Git::NextVersion
       config:
@@ -75,7 +77,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::ETHER/Git::NextVersion'
-      version: '2.023'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::PromptIfStale
       config:
@@ -87,7 +89,7 @@ x_Dist_Zilla:
           phase: build
           skip: []
       name: '@Author::ETHER/stale modules, build'
-      version: '0.024'
+      version: '0.028'
     -
       class: Dist::Zilla::Plugin::PromptIfStale
       config:
@@ -98,52 +100,64 @@ x_Dist_Zilla:
           phase: release
           skip: []
       name: '@Author::ETHER/stale modules, release'
-      version: '0.024'
+      version: '0.028'
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Author::ETHER/ExecDir'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Author::ETHER/ShareDir'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::FileFinder::ByName
       name: '@Author::ETHER/Examples'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::FileFinder::ByName
       name: '@Author::ETHER/ExtraTestFiles'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::Git::GatherDir
       config:
+        Dist::Zilla::Plugin::GatherDir:
+          exclude_filename:
+            - README.md
+            - README.pod
+            - LICENSE
+            - CONTRIBUTING
+          exclude_match: []
+          follow_symlinks: '0'
+          include_dotfiles: '0'
+          prefix: ''
+          prune_directory: []
+          root: .
         Dist::Zilla::Plugin::Git::GatherDir:
           include_untracked: '0'
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::ETHER/Git::GatherDir'
-      version: '2.023'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Author::ETHER/MetaYAML'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Author::ETHER/MetaJSON'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::License
       name: '@Author::ETHER/License'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Author::ETHER/Readme'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Author::ETHER/Manifest'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::GenerateFile::ShareDir
       config:
@@ -172,7 +186,7 @@ x_Dist_Zilla:
             - '@Author::ETHER/Examples'
           skips: []
       name: '@Author::ETHER/Test::Compile'
-      version: '2.046'
+      version: '2.051'
     -
       class: Dist::Zilla::Plugin::Test::NoTabs
       config:
@@ -187,13 +201,16 @@ x_Dist_Zilla:
       name: '@Author::ETHER/Test::NoTabs'
       version: '0.09'
     -
-      class: Dist::Zilla::Plugin::EOLTests
-      name: '@Author::ETHER/EOLTests'
-      version: '0.02'
+      class: Dist::Zilla::Plugin::Test::EOL
+      config:
+        Dist::Zilla::Plugin::Test::EOL:
+          filename: xt/author/eol.t
+      name: '@Author::ETHER/Test::EOL'
+      version: '0.15'
     -
       class: Dist::Zilla::Plugin::MetaTests
       name: '@Author::ETHER/MetaTests'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::Test::CPAN::Changes
       name: '@Author::ETHER/Test::CPAN::Changes'
@@ -209,11 +226,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Author::ETHER/PodSyntaxTests'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@Author::ETHER/PodCoverageTests'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::Test::PodSpelling
       name: '@Author::ETHER/Test::PodSpelling'
@@ -249,18 +266,18 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@Author::ETHER/PkgVersion'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::AuthorityFromModule
       config:
         Dist::Zilla::Plugin::AuthorityFromModule:
           module: namespace::autoclean
       name: '@Author::ETHER/AuthorityFromModule'
-      version: '0.002'
+      version: '0.003'
     -
       class: Dist::Zilla::Plugin::Authority
       name: '@Author::ETHER/Authority'
-      version: '1.006'
+      version: '1.009'
     -
       class: Dist::Zilla::Plugin::PodWeaver
       config:
@@ -272,81 +289,81 @@ x_Dist_Zilla:
             -
               class: Pod::Weaver::Plugin::EnsurePod5
               name: '@CorePrep/EnsurePod5'
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Plugin::H1Nester
               name: '@CorePrep/H1Nester'
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Plugin::SingleEncoding
-              name: -SingleEncoding
-              version: '4.006'
+              name: '@Default/SingleEncoding'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Name
-              name: Name
-              version: '4.006'
+              name: '@Default/Name'
+              version: '4.007'
+            -
+              class: Pod::Weaver::Section::Version
+              name: '@Default/Version'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Region
-              name: prelude
-              version: '4.006'
+              name: '@Default/prelude'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Generic
               name: SYNOPSIS
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Generic
               name: DESCRIPTION
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Generic
               name: OVERVIEW
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Collect
               name: ATTRIBUTES
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Collect
               name: METHODS
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Collect
               name: FUNCTIONS
-              version: '4.006'
-            -
-              class: Pod::Weaver::Section::Collect
-              name: TYPES
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Leftovers
-              name: Leftovers
-              version: '4.006'
+              name: '@Default/Leftovers'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Region
-              name: postlude
-              version: '4.006'
+              name: '@Default/postlude'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Authors
-              name: Authors
-              version: '4.006'
+              name: '@Default/Authors'
+              version: '4.007'
+            -
+              class: Pod::Weaver::Section::Legal
+              name: '@Default/Legal'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Contributors
               name: Contributors
               version: '0.008'
             -
-              class: Pod::Weaver::Section::Legal
-              name: Legal
-              version: '4.006'
-            -
               class: Pod::Weaver::Plugin::Transformer
               name: -Transformer
-              version: '4.006'
+              version: '4.007'
       name: '@Author::ETHER/PodWeaver'
       version: '4.006'
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: '@Author::ETHER/NextRelease'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::ReadmeAnyFromPod
       name: '@Author::ETHER/ReadmeAnyFromPod'
@@ -362,7 +379,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaNoIndex
       name: '@Author::ETHER/MetaNoIndex'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::MetaProvides::Package
       config:
@@ -373,7 +390,7 @@ x_Dist_Zilla:
             -
               class: Dist::Zilla::Plugin::FinderCode
               name: ':InstallModules'
-              version: '5.020'
+              version: '5.023'
         Dist::Zilla::Role::MetaProvider::Provider:
           inherit_missing: '1'
           inherit_version: '1'
@@ -383,7 +400,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::ETHER/MetaConfig'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::Keywords
       config:
@@ -408,11 +425,11 @@ x_Dist_Zilla:
           order_by: commits
           paths: []
       name: '@Author::ETHER/Git::Contributors'
-      version: '0.007'
+      version: '0.008'
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Author::ETHER/AutoPrereqs'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::Prereqs::AuthorDeps
       name: '@Author::ETHER/Prereqs::AuthorDeps'
@@ -420,7 +437,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MinimumPerl
       name: '@Author::ETHER/MinimumPerl'
-      version: '1.003'
+      version: '1.006'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -428,14 +445,14 @@ x_Dist_Zilla:
           phase: develop
           type: recommends
       name: '@Author::ETHER/pluginbundle_version'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::MakeMaker::Fallback
       config:
         Dist::Zilla::Role::TestRunner:
           default_jobs: 9
       name: '@Author::ETHER/MakeMaker::Fallback'
-      version: '0.013'
+      version: '0.014'
     -
       class: Dist::Zilla::Plugin::ModuleBuildTiny::Fallback
       config:
@@ -447,29 +464,29 @@ x_Dist_Zilla:
                 Dist::Zilla::Role::TestRunner:
                   default_jobs: 9
               name: ModuleBuildTiny::Fallback
-              version: '5.020'
+              version: '5.023'
             -
               class: Dist::Zilla::Plugin::ModuleBuildTiny
               config:
                 Dist::Zilla::Role::TestRunner:
                   default_jobs: 9
               name: ModuleBuildTiny::Fallback
-              version: '0.007'
+              version: '0.008'
         Dist::Zilla::Role::TestRunner:
           default_jobs: 9
       name: '@Author::ETHER/ModuleBuildTiny::Fallback'
-      version: '0.006'
+      version: '0.010'
     -
       class: Dist::Zilla::Plugin::InstallGuide
       name: '@Author::ETHER/InstallGuide'
-      version: '1.200003'
+      version: '1.200005'
     -
       class: Dist::Zilla::Plugin::RunExtraTests
       config:
         Dist::Zilla::Role::TestRunner:
           default_jobs: 9
       name: '@Author::ETHER/RunExtraTests'
-      version: '0.022'
+      version: '0.023'
     -
       class: Dist::Zilla::Plugin::CheckSelfDependency
       config:
@@ -483,8 +500,16 @@ x_Dist_Zilla:
       config:
         Dist::Zilla::Plugin::Run::Role::Runner:
           run:
-            - "bash -c \"if [[ `dirname %d` != .build ]]; then test -e .ackrc && grep -q -- '--ignore-dir=%d' .ackrc || echo '--ignore-dir=%d' >> .ackrc; fi; if [[ %d =~ ^%n-[.[:xdigit:]]+$ ]]; then rm -f .latest; ln -s %d .latest; fi\""
-      name: '@Author::ETHER/Run::AfterBuild'
+            - "bash -c \"if [[ `dirname %d` != .build ]]; then test -e .ackrc && grep -q -- '--ignore-dir=%d' .ackrc || echo '--ignore-dir=%d' >> .ackrc; fi\""
+      name: '@Author::ETHER/.ackrc'
+      version: '0.026'
+    -
+      class: Dist::Zilla::Plugin::Run::AfterBuild
+      config:
+        Dist::Zilla::Plugin::Run::Role::Runner:
+          eval:
+            - "if ('%d' =~ /^%n-[.[:xdigit:]]+$/) { unlink '.latest'; symlink '%d', '.latest'; }"
+      name: '@Author::ETHER/.latest'
       version: '0.026'
     -
       class: Dist::Zilla::Plugin::CheckStrictVersion
@@ -502,7 +527,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::ETHER/initial check'
-      version: '2.023'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::Git::CheckFor::MergeConflicts
       config:
@@ -528,7 +553,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Author::ETHER/TestRelease'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::Git::Check
       config:
@@ -541,25 +566,31 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::ETHER/after tests'
-      version: '2.023'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::CheckIssues
       name: '@Author::ETHER/CheckIssues'
-      version: '0.002'
+      version: '0.004'
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Author::ETHER/UploadToCPAN'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::CopyFilesFromRelease
+      config:
+        Dist::Zilla::Plugin::CopyFilesFromRelease:
+          filename:
+            - LICENSE
+            - CONTRIBUTING
+          match: []
       name: '@Author::ETHER/CopyFilesFromRelease'
-      version: '0.002'
+      version: '0.003'
     -
       class: Dist::Zilla::Plugin::Run::AfterRelease
       config:
         Dist::Zilla::Plugin::Run::Role::Runner:
-          run:
-            - 'rm -f README.md'
+          eval:
+            - "unlink 'README.md'"
       name: '@Author::ETHER/remove old READMEs'
       version: '0.026'
     -
@@ -582,21 +613,21 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::ETHER/Git::Commit'
-      version: '2.023'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::Git::Tag
       config:
         Dist::Zilla::Plugin::Git::Tag:
           branch: ~
           signed: 0
-          tag: '0.20'
+          tag: '0.21'
           tag_format: '%v%t'
           tag_message: v%v%t
           time_zone: local
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::ETHER/Git::Tag'
-      version: '2.023'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::GitHub::Update
       name: '@Author::ETHER/GitHub::Update'
@@ -611,7 +642,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::ETHER/Git::Push'
-      version: '2.023'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::Run::AfterRelease
       config:
@@ -622,7 +653,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Author::ETHER/ConfirmRelease'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -630,7 +661,7 @@ x_Dist_Zilla:
           phase: develop
           type: requires
       name: DevelopRequires
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::Test::CleanNamespaces
       config:
@@ -642,49 +673,49 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':AllFiles'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':NoFiles'
-      version: '5.020'
+      version: '5.023'
     -
       class: Dist::Zilla::Plugin::VerifyPhases
       name: '@Author::ETHER/PHASE VERIFICATION'
-      version: '0.003'
+      version: '0.005'
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: '0'
-    version: '5.020'
+    version: '5.023'
 x_authority: cpan:FLORA
 x_authority_from_module: namespace::autoclean
 x_contributors:
-  - 'Graham Knop <haarg@haarg.org>'
   - 'Karen Etheridge <ether@cpan.org>'
+  - 'Graham Knop <haarg@haarg.org>'
   - 'Dave Rolsky <autarch@urth.org>'
   - 'Kent Fredric <kentfredric@gmail.com>'
   - 'Tomas Doran <bobtfish@bobtfish.net>'
