--- a/dist.ini
+++ b/dist.ini
@@ -6,11 +6,9 @@ copyright_year = 2009
 
 [@Author::ETHER]
 :version = 0.068
-server = github
 Authority.authority = cpan:FLORA
 Git::NextVersion.version_regexp = ^([\d._]+)(-TRIAL)?$
 Git::Tag.tag_format = %v%t
-Git::Tag.tag_message = v%v%t
 AutoPrereqs.skips[0] = ^Moo
 AutoPrereqs.skips[1] = ^(Some::|My)Role$
 AutoPrereqs.skips[2] = ^Sub::Name$
@@ -22,7 +20,6 @@ AutoPrereqs.skips[5] = ^OldMoose$
 Class::MOP = 0
 Moose = 0.56
 MooseX::Role::WithOverloading = 0
-MooseX::MarkAsMethods = 0
 Moo = 0
 Mouse = 0
 Sub::Name = 0
@@ -33,6 +30,7 @@ Test::Fatal = 0
 parent = 0
 Role::Tiny = 1.003000
 MooseX::Role::Parameterized = 0
+Sub::Install = 0
 
 ; authordep Pod::Weaver = 4
 ; authordep Pod::Weaver::Section::Contributors
