--- a/META.yml
+++ b/META.yml
@@ -40,7 +40,7 @@ no_index:
 provides:
   namespace::autoclean:
     file: lib/namespace/autoclean.pm
-    version: '0.23'
+    version: '0.24'
 requires:
   B::Hooks::EndOfScope: '0.12'
   List::Util: '0'
@@ -53,7 +53,7 @@ resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=namespace-autoclean
   homepage: https://github.com/moose/namespace-autoclean
   repository: https://github.com/moose/namespace-autoclean.git
-version: '0.23'
+version: '0.24'
 x_Dist_Zilla:
   perl:
     version: '5.020001'
@@ -88,7 +88,7 @@ x_Dist_Zilla:
           phase: build
           skip: []
       name: '@Author::ETHER/stale modules, build'
-      version: '0.032'
+      version: '0.033'
     -
       class: Dist::Zilla::Plugin::PromptIfStale
       config:
@@ -99,7 +99,7 @@ x_Dist_Zilla:
           phase: release
           skip: []
       name: '@Author::ETHER/stale modules, release'
-      version: '0.032'
+      version: '0.033'
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Author::ETHER/ExecDir'
@@ -264,7 +264,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Git::Describe
       name: '@Author::ETHER/Git::Describe'
-      version: '0.003'
+      version: '0.004'
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@Author::ETHER/PkgVersion'
@@ -280,67 +280,67 @@ x_Dist_Zilla:
             -
               class: Pod::Weaver::Plugin::EnsurePod5
               name: '@CorePrep/EnsurePod5'
-              version: '4.009'
+              version: '4.010'
             -
               class: Pod::Weaver::Plugin::H1Nester
               name: '@CorePrep/H1Nester'
-              version: '4.009'
+              version: '4.010'
             -
               class: Pod::Weaver::Plugin::SingleEncoding
               name: '@Default/SingleEncoding'
-              version: '4.009'
+              version: '4.010'
             -
               class: Pod::Weaver::Section::Name
               name: '@Default/Name'
-              version: '4.009'
+              version: '4.010'
             -
               class: Pod::Weaver::Section::Version
               name: '@Default/Version'
-              version: '4.009'
+              version: '4.010'
             -
               class: Pod::Weaver::Section::Region
               name: '@Default/prelude'
-              version: '4.009'
+              version: '4.010'
             -
               class: Pod::Weaver::Section::Generic
               name: SYNOPSIS
-              version: '4.009'
+              version: '4.010'
             -
               class: Pod::Weaver::Section::Generic
               name: DESCRIPTION
-              version: '4.009'
+              version: '4.010'
             -
               class: Pod::Weaver::Section::Generic
               name: OVERVIEW
-              version: '4.009'
+              version: '4.010'
             -
               class: Pod::Weaver::Section::Collect
               name: ATTRIBUTES
-              version: '4.009'
+              version: '4.010'
             -
               class: Pod::Weaver::Section::Collect
               name: METHODS
-              version: '4.009'
+              version: '4.010'
             -
               class: Pod::Weaver::Section::Collect
               name: FUNCTIONS
-              version: '4.009'
+              version: '4.010'
             -
               class: Pod::Weaver::Section::Leftovers
               name: '@Default/Leftovers'
-              version: '4.009'
+              version: '4.010'
             -
               class: Pod::Weaver::Section::Region
               name: '@Default/postlude'
-              version: '4.009'
+              version: '4.010'
             -
               class: Pod::Weaver::Section::Authors
               name: '@Default/Authors'
-              version: '4.009'
+              version: '4.010'
             -
               class: Pod::Weaver::Section::Legal
               name: '@Default/Legal'
-              version: '4.009'
+              version: '4.010'
             -
               class: Pod::Weaver::Section::Contributors
               name: Contributors
@@ -348,7 +348,7 @@ x_Dist_Zilla:
             -
               class: Pod::Weaver::Plugin::Transformer
               name: -Transformer
-              version: '4.009'
+              version: '4.010'
       name: '@Author::ETHER/PodWeaver'
       version: '4.006'
     -
@@ -398,7 +398,7 @@ x_Dist_Zilla:
           inherit_version: '1'
           meta_noindex: '1'
       name: '@Author::ETHER/MetaProvides::Package'
-      version: '2.001002'
+      version: '2.002000'
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::ETHER/MetaConfig'
@@ -595,8 +595,7 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::Git::Commit
       config:
         Dist::Zilla::Plugin::Git::Commit:
-          add_files_in:
-            - .
+          add_files_in: []
           commit_msg: '%N-%v%t%n%n%c'
           time_zone: local
         Dist::Zilla::Role::Git::DirtyFiles:
@@ -618,7 +617,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: ~
           signed: 0
-          tag: '0.23'
+          tag: '0.24'
           tag_format: '%v%t'
           tag_message: v%v%t
           time_zone: local
@@ -629,7 +628,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::GitHub::Update
       name: '@Author::ETHER/GitHub::Update'
-      version: '0.38'
+      version: '0.39'
     -
       class: Dist::Zilla::Plugin::Git::Push
       config:
